--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_relation.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_relation.xml
@@ -102,6 +102,7 @@
         android:layout_below="@id/ll_relation"
         style="@style/view_middle"/>
     <ScrollView
+        android:id="@+id/scroll_relation"
         android:layout_below="@id/ll_relation"
         android:layout_above="@+id/rl_bottom_relation"
         android:layout_width="match_parent"
