--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address_item.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,41 +10,63 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:background="#ffffff">
             <RelativeLayout
                 android:id="@+id/rl_show_address"
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp">
+                android:layout_marginLeft="15dp">
                 <TextView
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="4dp"
                     android:id="@+id/tv_personal_info_add_address_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="qianjiajia"
+                    android:textColor="#444444"
                     android:textSize="14sp"/>
                 <TextView
-                    android:layout_marginTop="8dp"
+                    android:textColor="#444444"
+                    android:layout_marginTop="2dp"
                     android:layout_below="@id/tv_personal_info_add_address_name"
                     android:id="@+id/tv_personal_info_add_address_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1848217219"
                     android:textSize="14sp"/>
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#0e932e"
                     android:textSize="14sp"
-                    android:text="[公司]"
-                    android:layout_marginTop="8dp"
+                    android:text="["
+                    android:id="@+id/tv_tvtv"
+                    android:layout_marginTop="2dp"
                     android:layout_below="@id/tv_personal_info_add_address_phone"/>
 
                 <TextView
-                    android:layout_marginTop="8dp"
+                    android:id="@+id/tv_address_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#0e932e"
+                    android:textSize="14sp"
+                    android:text="公司"
+                    android:layout_toRightOf="@+id/tv_tvtv"
+                    android:layout_marginTop="2dp"
+                    android:layout_below="@id/tv_personal_info_add_address_phone"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#0e932e"
+                    android:textSize="14sp"
+                    android:text="]"
+                    android:layout_toRightOf="@+id/tv_address_type"
+                    android:layout_marginTop="2dp"
+                    android:layout_below="@id/tv_personal_info_add_address_phone"/>
+                <TextView
+                    android:textColor="#444444"
+                    android:layout_marginTop="2dp"
                     android:layout_below="@id/tv_personal_info_add_address_phone"
                     android:id="@+id/tv_personal_info_add_address_address"
                     android:layout_width="wrap_content"
@@ -62,6 +84,7 @@
                 android:layout_alignParentRight="true">
 
                 <TextView
+                    android:textColor="#444444"
                     android:id="@+id/tv_edit_address"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
