[kitchen]分类页面网络数据处理及页面ui显示

--- a/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
@@ -23,4 +23,7 @@
 
     <color name="colorPrimaryPersonal">#0e932e</color>
     <color name="colorPrimaryDarkPersonal">#0e932e</color>
+    <color name="con_dark">#292d2a</color>
+    <color name="con_white">#ffffff</color>
+
 </resources>
