--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_kitchen_main_bottombar.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_kitchen_main_bottombar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/main_tab_bottom_shape"
     android:layout_height="58dp">
 
     <RadioGroup
@@ -76,4 +77,4 @@
 
     </RadioGroup>
 
-</android.support.v7.widget.CardView>
+</FrameLayout>
