--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_sort.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_sort.xml
@@ -55,20 +55,24 @@
 
 
             <LinearLayout
+                android:id="@+id/ll_shuCai"
                 android:layout_width="match_parent"
+                android:layout_marginTop="-2dp"
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:gravity="center_vertical">
 
                 <ImageView
+                    android:id="@+id/img_shuCai"
                     android:layout_width="5dp"
                     android:layout_height="25dp"
                     android:background="@color/con_yellow" />
 
                 <TextView
+                    android:id="@+id/tv_shuCai"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@android:color/white"
+                    android:background="@android:color/darker_gray"
                     android:gravity="center"
                     android:text="蔬菜"
                     android:textSize="15sp" />
@@ -77,17 +81,20 @@
 
 
             <LinearLayout
+                android:id="@+id/ll_shuiGuo"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:gravity="center_vertical">
 
                 <ImageView
+                    android:id="@+id/img_shuiGuo"
                     android:layout_width="5dp"
                     android:layout_height="25dp"
                     android:background="@color/con_yellow" />
 
                 <TextView
+                    android:id="@+id/tv_shuiGuo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:color/white"
@@ -98,17 +105,20 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_rouLei"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:gravity="center_vertical">
 
                 <ImageView
+                    android:id="@+id/img_rouLei"
                     android:layout_width="5dp"
                     android:layout_height="25dp"
                     android:background="@color/con_yellow" />
 
                 <TextView
+                    android:id="@+id/tv_rouLei"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:color/white"
@@ -119,17 +129,20 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_qinDan"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:gravity="center_vertical">
 
                 <ImageView
+                    android:id="@+id/img_qinDan"
                     android:layout_width="5dp"
                     android:layout_height="25dp"
                     android:background="@color/con_yellow" />
 
                 <TextView
+                    android:id="@+id/tv_qinDan"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:color/white"
@@ -140,17 +153,20 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_shuiChan"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:gravity="center_vertical">
 
                 <ImageView
+                    android:id="@+id/img_shuiChan"
                     android:layout_width="5dp"
                     android:layout_height="25dp"
                     android:background="@color/con_yellow" />
 
                 <TextView
+                    android:id="@+id/tv_shuiChan"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:color/white"
@@ -161,17 +177,20 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_liangYou"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:gravity="center_vertical">
 
                 <ImageView
+                    android:id="@+id/img_liangYou"
                     android:layout_width="5dp"
                     android:layout_height="25dp"
                     android:background="@color/con_yellow" />
 
                 <TextView
+                    android:id="@+id/tv_liangYou"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:color/white"
@@ -197,6 +216,7 @@
             android:layout_weight="1">
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/rcy_sort"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </android.support.v7.widget.RecyclerView>
