[kitchen]优化首页显示及逻辑，添加优惠商品列表，人气推荐列表

--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_kitchen_main_bottombar.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_kitchen_main_bottombar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@drawable/main_tab_bottom_shape"
     android:layout_height="58dp">
@@ -8,7 +8,10 @@
         android:id="@+id/rdoGrp_tab_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <RadioButton
             android:id="@+id/rdoBtn_tab_home"
@@ -77,4 +80,38 @@
 
     </RadioGroup>
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/tv_msg_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circle_shape"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:text="1"
+            android:textAlignment="center"
+            android:textColor="@color/con_white"
+            android:textSize="13sp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
