--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_home.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_home.xml
@@ -41,10 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:drawableEnd="@drawable/ic_pull_down"
-            android:drawableLeft="@drawable/ic_location"
             android:drawablePadding="5dp"
             android:drawableRight="@drawable/ic_pull_down"
-            android:drawableStart="@drawable/ic_location"
             android:gravity="center"
             android:text="益江路 511弄..."
             android:textColor="@android:color/white" />
@@ -107,13 +105,15 @@
                     android:layout_weight="3">
 
                     <LinearLayout
+                        android:id="@+id/ll_you_hui"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:descendantFocusability="blocksDescendants"
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <ImageButton
+                        <ImageView
                             android:layout_width="55dp"
                             android:layout_height="55dp"
                             android:background="@drawable/ic_setting" />
@@ -123,19 +123,22 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:padding="3dp"
-                            android:text="优惠套餐"
-                            android:textSize="15sp" />
+                            android:text="优惠商品"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_jin_bao"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:descendantFocusability="blocksDescendants"
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <ImageButton
+                        <ImageView
                             android:layout_width="55dp"
                             android:layout_height="55dp"
                             android:background="@drawable/ic_setting" />
@@ -146,18 +149,21 @@
                             android:gravity="center"
                             android:padding="3dp"
                             android:text="劲爆团购"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_ren_qi"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:descendantFocusability="blocksDescendants"
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <ImageButton
+                        <ImageView
                             android:layout_width="55dp"
                             android:layout_height="55dp"
                             android:background="@drawable/ic_setting" />
@@ -168,7 +174,8 @@
                             android:gravity="center"
                             android:padding="3dp"
                             android:text="人气推荐"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
@@ -208,8 +215,9 @@
                             android:layout_marginTop="8dp"
                             android:layout_toRightOf="@id/image_you"
                             android:gravity="center"
-                            android:text="优惠套餐"
-                            android:textSize="15sp" />
+                            android:text="优惠商品"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_you_jiantou"
@@ -223,7 +231,8 @@
                             android:layout_marginTop="8dp"
                             android:gravity="center"
                             android:text=">"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_youhui_more"
@@ -237,7 +246,8 @@
                             android:layout_toStartOf="@+id/tv_you_jiantou"
                             android:gravity="center"
                             android:text="更多"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
 
                     </RelativeLayout>
@@ -251,6 +261,11 @@
 
 
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/con_font_gray3" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -282,7 +297,8 @@
                             android:layout_toRightOf="@id/image_tuan"
                             android:gravity="center"
                             android:text="劲爆团购"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_tuan_jiantou"
@@ -296,7 +312,8 @@
                             android:layout_marginTop="8dp"
                             android:gravity="center"
                             android:text=">"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_tuangou_more"
@@ -309,8 +326,9 @@
                             android:layout_toLeftOf="@+id/tv_tuan_jiantou"
                             android:layout_toStartOf="@+id/tv_tuan_jiantou"
                             android:gravity="center"
-                            android:text="更多"
-                            android:textSize="15sp" />
+                            android:text="团购入口"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
 
                     </RelativeLayout>
@@ -323,6 +341,11 @@
                     </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/con_font_gray3" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -354,7 +377,8 @@
                             android:layout_toRightOf="@id/image_tui"
                             android:gravity="center"
                             android:text="人气推荐"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_tui_jiantou"
@@ -368,7 +392,8 @@
                             android:layout_marginTop="8dp"
                             android:gravity="center"
                             android:text=">"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_tuijian_more"
@@ -382,7 +407,8 @@
                             android:layout_toStartOf="@+id/tv_tui_jiantou"
                             android:gravity="center"
                             android:text="更多"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
 
                     </RelativeLayout>
