--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_sort_subsortlist_view.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_sort_subsortlist_view.xml
@@ -39,8 +39,7 @@
                 android:layout_alignParentTop="true"
                 android:background="@drawable/circle_shape"
                 android:gravity="center"
-                android:paddingTop="3dp"
-                android:paddingBottom="3dp"
+                android:textAlignment="center"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="1"
