--- a/QianJiaJia-kitchen/app/src/main/res/layout/listitem_home_discount_list.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/listitem_home_discount_list.xml
@@ -3,6 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="230dp"
     android:orientation="vertical"
+    android:layout_margin="5dp"
+    android:background="@color/con_grey_white"
     android:padding="6dp">
 
     <RelativeLayout
@@ -14,7 +16,6 @@
             android:id="@+id/pro_image"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/ic_up"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
