--- a/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="colorPrimaryDarkPersonal">#0e932e</color>
     <color name="con_dark">#292d2a</color>
     <color name="con_white">#ffffff</color>
+    <color name="con_grey_white">#F7F7F7</color>
     <color name="con_red">#FD4A2E</color>
 
 </resources>
