[kitchen]添加团购列表ui，业务逻辑

--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_home_select_address.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_home_select_address.xml
@@ -5,7 +5,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:background="@color/con_blue"
+        android:background="@color/colorPrimary"
         android:gravity="center_vertical"
         android:layout_height="55dp">
 
